--- a/scss/core/_globals.scss
+++ b/scss/core/_globals.scss
@@ -137,7 +137,7 @@
   .grey { color: var(--blades-grey) !important }
   .white { color: var(--blades-white) !important }
   .white-bright { color: var(--blades-white-bright) !important }
-  .cyan-bright { color: var(--blades-cyan-bright) !important }
+  .cyan-bright { color: var(--blades-blue-bright) !important }
   .uppercase { text-transform: uppercase !important }
   .inline-code {
     font-family: var(--font-mono) !important;
