--- a/scss/sheets/_score-sheet.scss
+++ b/scss/sheets/_score-sheet.scss
@@ -50,7 +50,7 @@
             position: relative;
             &:last-child {
               grid-area: controls-right;
-              // background: var(--blades-cyan-dark);
+              // background: var(--blades-blue-dark);
             }
 
             .toggle-icon {
