--- a/templates/roll/partials/roll-collab-resistance-gm.hbs
+++ b/templates/roll/partials/roll-collab-resistance-gm.hbs
@@ -152,7 +152,7 @@
     </div>
 
     <div class="roll-odds-label-container">
-      <div class="input-target-cycler roll-phase-cycler" data-action="cycle-target" data-target="flags.eunos-blades.rollCollab.rollPhase" data-val-0="Collaboration" data-val-1="AwaitingResult" data-cur-val="{{rollPhase}}">
+      <div class="input-target-cycler roll-phase-cycler" data-action="gm-cycle-target" data-target="flags.eunos-blades.rollCollab.rollPhase" data-val-0="Collaboration" data-val-1="AwaitingResult" data-cur-val="{{rollPhase}}">
         {{#if (test rollPhase "==" "Collaboration")}}
           <i class="fa-duotone fa-messages"></i>
           <span class=""
